# advent-of-code-2024

./: .gitignore  README.md  profile.py
aoc24c/: CMakeLists.txt  day01.c  day02.c  day03.c  day04.c  day05.c  day06.c  day07.c  day08.c  day10.c  day19.c  days.h  fatal.h  grid.h  io.h  list.h  main.c  points.h  profile.sh  strings.h  timing.h
aoc24cpp/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  days.hpp  main.cpp  profile.sh  timing.hpp
aoc24java/: profile.sh
aoc24java/src/: Day09.java  Main.java
aoc24py/: astar.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  grid.py  main.py  profile.sh  twodee.py
input/: med12.txt  three16.txt  tiny16.txt
